fix mobile warping on Safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -72,7 +72,8 @@ h6 {
       .site-header-logo {
         width: 162px; } }
   .site-header-link {
-    display: flex; }
+    display: flex;
+    align-items: flex-start; }
 
 .site-nav.inactive {
   display: none; }
