--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -26,5 +26,6 @@
   }
   &-link {
     display: flex;
+    align-items: flex-start;
   }
 }
